# product-query-bot

./: .env  .gitignore  README.md  docker-compose.yml
frontend/: .env  index.html  package-lock.json  package.json  webhook-server.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Chat.jsx  MessageInput.jsx  MessageList.jsx  UserSelector.jsx
frontend/src/services/: api.js  webhook.js
llm-service/: .env  Dockerfile  pyproject.toml
llm-service/app/: main.py
llm-service/app/api/: llm_endpoints.py
llm-service/app/core/: config.py  logging_config.py
llm-service/app/services/: llm_service.py
query-api/: .env  pyproject.toml
query-api/app/: main.py
query-api/app/agents/: orchestrator.py  responder_agent.py  retriever_agent.py
query-api/app/api/: endpoints.py
query-api/app/core/: config.py
query-api/app/models/: schemas.py
query-api/app/prompts/: templates.py
query-api/app/services/: llm_client.py  rag_client.py
query-api/docker/: Dockerfile  init.sql
rag-service/: .env  pyproject.toml
rag-service/app/: main.py
rag-service/app/api/: rag_endpoints.py
rag-service/app/core/: config.py  logging.py
rag-service/app/services/: embedding_service.py  rag_service.py  vector_store_service.py
rag-service/app/utils/: data_loader.py
rag-service/docker/: Dockerfile
