[project]
name = "query-api"
version = "0.1.0"
description = "Query API for Product Query Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "asyncpg>=0.29.0",
    "langchain-core>=0.3.66",
]


[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]
